deploy/projects/pn/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-frontend
  namespace: proj-pn
  labels:
    app.kubernetes.io/name: pn-frontend
    app.kubernetes.io/part-of: project-pn
    platform.nacfson.io/managed-by: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pn-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pn-frontend
        app.kubernetes.io/part-of: project-pn
    spec:
      serviceAccountName: pn-workload-sa
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-creds
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: ghcr.io/nacfson/project-pn-frontend@sha256:bc70cb06625c439d911a05d97febb7275b642ab7386022625302f1e224a696ce
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
